<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_gen"
        android:title="General">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="stopOnShake"
            android:title="@string/stopOnShakeTitle"
            android:summary="@string/stopOnShakeSummary"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="hasSuction"
            android:title="@string/hasSuctionTitle"
            android:summary="@string/hasSuctionSummary"/>
        <ListPreference
            android:defaultValue="150"
            android:key="maxCommandHistory"
            android:title="@string/maxCommandHistoryTitle"
            android:summary="@string/maxCommandHistorySummary"
            android:entries="@array/maxCommandHistoryArray"
            android:entryValues="@array/maxCommandHistoryArray" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_gen"
        android:title="Intervalos del PID">
        <EditTextPreference
            android:defaultValue="5"
            android:key="hardIntervalP"
            android:title="@string/hardIntervalPTitle"
            android:summary="@string/softIntervalPSummary"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:numeric="decimal"
            android:digits="0123456789."/>
        <EditTextPreference
            android:defaultValue="1"
            android:key="softIntervalP"
            android:title="@string/softIntervalPTitle"
            android:summary="@string/softIntervalPSummary"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:numeric="decimal"
            android:digits="0123456789."/>
        <EditTextPreference
            android:defaultValue="5"
            android:key="hardIntervalI"
            android:title="@string/hardIntervalITitle"
            android:summary="@string/hardIntervalISummary"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:numeric="decimal"
            android:digits="0123456789."/>
        <EditTextPreference
            android:defaultValue="1"
            android:key="softIntervalI"
            android:title="@string/softIntervalITitle"
            android:summary="@string/softIntervalISummary"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:numeric="decimal"
            android:digits="0123456789."/>
        <EditTextPreference
            android:defaultValue="5"
            android:key="hardIntervalD"
            android:title="@string/hardIntervalDTitle"
            android:summary="@string/hardIntervalDSummary"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:numeric="decimal"
            android:digits="0123456789."/>
        <EditTextPreference
            android:defaultValue="1"
            android:key="softIntervalD"
            android:title="@string/softIntervalDTitle"
            android:summary="@string/softIntervalDSummary"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:numeric="decimal"
            android:digits="0123456789."/>
    </PreferenceCategory>
</PreferenceScreen>