<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/toggleRun"
        android:title="@string/toggleRunPlayMenu"
        android:icon="@drawable/ic_play_arrow_black_48dp"
        app:showAsAction="ifRoom"/>
    <group>
    <item android:id="@+id/load"
        android:title="@string/loadMenu"
        android:icon="@drawable/ic_folder_open_black_48dp"
        app:showAsAction="never"/>
    <item android:id="@+id/save"
        android:title="@string/saveMenu"
        android:icon="@drawable/ic_save_black_48dp"
        app:showAsAction="never"/>
    <item android:id="@+id/delete"
        android:title="@string/deleteMenu"
        android:icon="@drawable/ic_save_black_48dp"
        app:showAsAction="never"/>
    </group>
    <item android:id="@+id/settings"
        android:title="@string/settingsMenu"
        android:icon="@drawable/ic_settings_black_48dp"
        app:showAsAction="never"/>
</menu>