<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="42sp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_marginTop="5dp"
        android:text="@string/userNuevo"
        />
    <ImageView
        android:id="@+id/imageMain"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/main_img"
        android:contentDescription="@string/logoContentDesc"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:layout_marginTop="0dp"
        android:text="@string/veamosCosas"
        android:textAlignment="center"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <ImageView
        android:id="@+id/swipeHand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_touch_app_black_48dp"
        android:rotation="-25"
        android:baselineAlignBottom="true"
        android:layout_marginBottom="20dp"
        android:visibility="visible"
        android:alpha="0.0"/>

</LinearLayout>