<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encontrarVincular"
        android:textSize="42sp"
        android:textAlignment="center"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_marginTop="5dp"
        android:text="@string/parPulsaciones"
        android:textAlignment="center"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/imgSearchPair"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/screenshot_search_pair"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:text="@string/tambienDesemparejar"
        android:textAlignment="center"/>
</LinearLayout>