<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e2f7c9"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.oprobots.robotaleh.pidfrombt.MainActivity">

    <TextView
        android:id="@+id/titP1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tituloPrincipal"
        android:textColor="#3d8fbe"
        android:textSize="25sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageMain"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/main_img"
        android:contentDescription="@string/logoContentDesc"/>

    <LinearLayout
        android:baselineAligned="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnListar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_refresh_black_48dp"
            android:text="@string/actualizarPareados"
            android:textSize="13sp"
            style="?android:attr/buttonBarButtonStyle"/>


        <Button
            android:id="@+id/btnBuscar"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_search_black_48dp"
            android:text="@string/buscarNuevos"
            android:textSize="13sp"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>


    <ListView
        android:id="@+id/listBT"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>
